# python_project_structure

./: .gitignore  requirements.txt  setup.cfg  setup.py
src/py_project/: common.py  hello_world.py
tests/: conftest.py  test_common.py
