[metadata]
name = py_project
version = 0.1.0
author = Igor Wlodarczyk
author_email = wlodar.igor@gmail.com
description = py_project

[options]
package_dir =
    = src

python_requires = >=3.7
setup_requires =
install_requires =

[options.entry_points]
console_scripts =
    hello-world = py_project.hello_world:hello_world
